[package]
name = "cybertracer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.1"
detour = "0.8"
memhack = { git = "https://github.com/jac3km4/memhack", rev = "v0.0.3", package = "memhack" }
memhack-derive = { git = "https://github.com/jac3km4/memhack", rev = "v0.0.3", package = "memhack-derive" }
dashmap = "5.3"
stybulate = "1.1"
ansi_term = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
